fix: delete cross alignment

--- a/frontend/components/FieldMedia/FieldMedia.css
+++ b/frontend/components/FieldMedia/FieldMedia.css
@@ -100,7 +100,7 @@
 }
 .remove-existing span {
   position: absolute;
-  top: 9px; left: 0; right: 0;
+  top: 8.5px; left: 0; right: 0;
   font-size: 19px;
 }
 
